Add same change correcting

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
           <a href="./assets/pages/contacts.html">Контакти</a>
         </li>
       </ul>
-      <a href="#переваги"> Наші переваги</a>
+      <nav>
+        <a href="#переваги"> Наші переваги</a>
+      </nav>
+     
       <button title="Безкоштовно">Замовити консультацію</button>
-      <a
-        href="https://www.youtube.com/channel/UCwH5izZvmrF5yjBwDfUh7KQ"
+      <a href="https://www.youtube.com/channel/UCwH5izZvmrF5yjBwDfUh7KQ"
         target="_blank">Ми в YouTube</a>
     </header>
 
@@ -29,24 +31,26 @@
     <img src="./assets/imeges/foto.png" alt="Our Company">
     <main>
       <p>UNLOCK YOUR POTENTIAL</p>
-
-      <p>
-        Навчальний центр Freshcode допомагає талановитим й амбітним студентам
-        розкривати свій потенціал, підтримуючи їх віру у власні сили.
-      </p>
-
-      <p id="переваги">
-        МИ ЗРОБИМО ВСЕ МОЖЛИВЕ, ЩОБ ТИ ОПАНУВАВ IT-ПРОФЕСІЮ З НУЛЯ!
-      </p>
-
-      <ol>
-        <li>Інтенсивні "живі" заняття по 3 години</li>
-        <li>Багато практики в рамках комплексних освітніх програм</li>
-        <li>Необмежений доступ до записів стрімів</li>
-        <li>Мінімальна ціна за годину занять</li>
-        <li>Укладаємо офіційний договір з кожним студентом</li>
-        <li>Працюємо без передоплати на декілька місяців вперед</li>
-      </ol>
+      <section>
+        <p>
+          Навчальний центр Freshcode допомагає талановитим й амбітним студентам
+          розкривати свій потенціал, підтримуючи їх віру у власні сили.
+        </p>
+  
+        <p id="переваги">
+          МИ ЗРОБИМО ВСЕ МОЖЛИВЕ, ЩОБ ТИ ОПАНУВАВ IT-ПРОФЕСІЮ З НУЛЯ!
+        </p>
+  
+        <ol>
+          <li>Інтенсивні "живі" заняття по 3 години</li>
+          <li>Багато практики в рамках комплексних освітніх програм</li>
+          <li>Необмежений доступ до записів стрімів</li>
+          <li>Мінімальна ціна за годину занять</li>
+          <li>Укладаємо офіційний договір з кожним студентом</li>
+          <li>Працюємо без передоплати на декілька місяців вперед</li>
+        </ol>
+      </section>
+      
     </main>
     <footer>2023 © FRESHCODE</footer>
     <a href="#">Наверх</a>
