Rename about us

--- a/index.html
+++ b/index.html
@@ -8,39 +8,30 @@
 
   <body>
     <header>
-    <h1>Training center by Freshcode</h1>
-     <nav>
-      <ul>
-        <li>
-          <a href="./assets/pages/about-us.html">Про компанію</a>
-        </li>
-        <li>
-          <a href="./assets/pages/contacts.html">Контакти</a>
-        </li>
-      </ul>
-      <a href="#переваги"> Наші переваги</a>
-     
-      <button title="Безкоштовно">Замовити консультацію</button>
-      <a href="https://www.youtube.com/channel/UCwH5izZvmrF5yjBwDfUh7KQ"
-        target="_blank">Ми в YouTube</a>
-     </nav>
-     </header>
+      <h1>Training center by Freshcode</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="./assets/pages/founders.html">Засновники компанії</a>
+          </li>
+          <li>
+            <a href="./assets/pages/contacts.html">Контакти</a>
+          </li>
+        </ul>
+        <button title="Безкоштовно">Замовити консультацію</button>
+      </nav>
+    </header>
 
-    <p>IT-ОСВІТА ВІД IT-КОМПАНІЇ</p>
-
-    <img src="./assets/imeges/foto.png" alt="Our Company">
     <main>
-      <p>UNLOCK YOUR POTENTIAL</p>
-      <section>
-        <p>
+      <article>
+        <h2>IT-ОСВІТА ВІД IT-КОМПАНІЇ</h2>
+        <img src="./assets/imeges/foto.png" alt="Our Company">
+        <h3>
           Навчальний центр Freshcode допомагає талановитим й амбітним студентам
           розкривати свій потенціал, підтримуючи їх віру у власні сили.
-        </p>
-  
-        <p id="переваги">
-          МИ ЗРОБИМО ВСЕ МОЖЛИВЕ, ЩОБ ТИ ОПАНУВАВ IT-ПРОФЕСІЮ З НУЛЯ!
-        </p>
-  
+        </h3>
+        <h3>МИ ЗРОБИМО ВСЕ МОЖЛИВЕ, ЩОБ ТИ ОПАНУВАВ IT-ПРОФЕСІЮ З НУЛЯ!</h3>
+
         <ol>
           <li>Інтенсивні "живі" заняття по 3 години</li>
           <li>Багато практики в рамках комплексних освітніх програм</li>
@@ -49,10 +40,13 @@
           <li>Укладаємо офіційний договір з кожним студентом</li>
           <li>Працюємо без передоплати на декілька місяців вперед</li>
         </ol>
-      </section>
-      
+      </article>
     </main>
-    <footer>2023 © FRESHCODE</footer>
-    <a href="#">Наверх</a>
+    <footer>
+      2023 © FRESHCODE
+      <a href="https://www.youtube.com/channel/UCwH5izZvmrF5yjBwDfUh7KQ" target="_blank"
+        >Ми в YouTube</a>
+      <a href="#">Наверх</a>
+    </footer>
   </body>
 </html>
