--- a/assets/pages/founders.html
+++ b/assets/pages/founders.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About us</title>
+    <title>Founders</title>
   </head>
 
   <body>
@@ -15,39 +15,27 @@
     <main>
       <section>
         <h2>
-          Засновники IT-компанії Freshcode є висококласні програмісти з досвідом
-          понад 10 років.
+          Засновники IT-компанії Freshcode є висококласними програмістами!
         </h2>
-        <h3>АРТЕМ БАРМІН</h3>
         <ul>
-          <li>
+          <li>АРТЕМ БАРМІН</li>
+          <p>
             Працював на позиціях Software Engineer і Team Lead з 2009 року. З
             2014 керує власною IT-компанією, активно співпрацює з іноземними
             партнерами та розвиває нові напрямки. Брав участь у проєктах для
             Eurovision, Total, KPMG.
-          </li>
-          <li>
-            <img
-              src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d1088146403fdd6b221_Rectangle_68392x.png"
-              alt="Artem Barmin"
-            />
-          </li>
-        </ul>
-
-        <h3>КОСТЯНТИН МОТОРНИЙ</h3>
-        <ul>
-          <li>
+          </p>
+          <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d1088146403fdd6b221_Rectangle_68392x.png"
+          alt="Artem Barmin"/>
+          <li>КОСТЯНТИН МОТОРНИЙ</li>
+          <p>
             Має досвід роботи в IT з 2012 року. Розробляв клієнтські та серверні
             додатки, спеціалізовані рішення на масовий ринок. Понад 7 років
             розвиває власну IT-компанію, навчає початківців і відповідає за
             технічну сторону проєктів.
-          </li>
-          <li>
-            <img
-              src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d0d690061f018eddf61_Rectangle_68402x-p-800.png"
-              alt="Kostya Motornyi"
-            />
-          </li>
+          </p>
+          <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d0d690061f018eddf61_Rectangle_68402x-p-800.png"
+          alt="Kostya Motornyi"/>
         </ul>
       </section>
     </main>
