--- a/assets/pages/contacts.html
+++ b/assets/pages/contacts.html
@@ -18,15 +18,10 @@
         <ul>
           <li>Телефон <br />068 774 60 55</li>
           <li>Пошта <br />trainingcenter@freshcodeit.jobs</li>
-          <li>
-            Адреса <br />м. Запоріжжя, Соборний 160, бізнес-центр Eco Tower
-          </li>
+          <li>Адреса <br />м. Запоріжжя, Соборний 160, бізнес-центр Eco Tower</li>
         </ul>
-        <img
-          src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/634418af3aad08bb022ffade_Logo.svg"
-          alt="Logo"
-        />
       </section>
+      <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/634418af3aad08bb022ffade_Logo.svg"alt="Logo"/>
     </main>
 
     <footer>
