--- a/assets/pages/founders.html
+++ b/assets/pages/founders.html
@@ -25,8 +25,7 @@
             партнерами та розвиває нові напрямки. Брав участь у проєктах для
             Eurovision, Total, KPMG.
           </p>
-          <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d1088146403fdd6b221_Rectangle_68392x.png"
-          alt="Artem Barmin"/>
+          <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d1088146403fdd6b221_Rectangle_68392x.png"alt="Artem Barmin"/>
           <li>КОСТЯНТИН МОТОРНИЙ</li>
           <p>
             Має досвід роботи в IT з 2012 року. Розробляв клієнтські та серверні
@@ -34,8 +33,7 @@
             розвиває власну IT-компанію, навчає початківців і відповідає за
             технічну сторону проєктів.
           </p>
-          <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d0d690061f018eddf61_Rectangle_68402x-p-800.png"
-          alt="Kostya Motornyi"/>
+          <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d0d690061f018eddf61_Rectangle_68402x-p-800.png"alt="Kostya Motornyi"/>
         </ul>
       </section>
     </main>
