--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <li>
             <a href="./assets/pages/contacts.html">Контакти</a>
           </li>
+          <li>
+            <a href="https://www.youtube.com/channel/UCwH5izZvmrF5yjBwDfUh7KQ" target="_blank">Ми в YouTube</a>
+          </li>
         </ul>
       </nav>
         <button title="Безкоштовно">Замовити консультацію</button>
@@ -44,8 +47,6 @@
     </main>
     <footer>
       2023 © FRESHCODE
-      <a href="https://www.youtube.com/channel/UCwH5izZvmrF5yjBwDfUh7KQ" target="_blank"
-        >Ми в YouTube</a>
       <a href="#">Наверх</a>
     </footer>
   </body>
