Add tel. mail <a>

--- a/assets/pages/contacts.html
+++ b/assets/pages/contacts.html
@@ -16,9 +16,16 @@
       <section>
         <h2>КОНТАКТИ</h2>
         <ul>
-          <li>Телефон <br />068 774 60 55</li>
-          <li>Пошта <br />trainingcenter@freshcodeit.jobs</li>
-          <li>Адреса <br />м. Запоріжжя, Соборний 160, бізнес-центр Eco Tower</li>
+          <li>
+            <a href="tel:+380687746055">Tel. +38 068 774 60 55</a>
+          </li>
+          <li>
+            <a href="mailto:trainingcenter@freshcodeit.jobs"
+              >Email: trainingcenter@freshcodeit.jobs</a>
+          </li>
+          <li>
+            Адреса: м. Запоріжжя, Соборний 160, бізнес-центр Eco Tower
+          </li>
         </ul>
       </section>
       <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/634418af3aad08bb022ffade_Logo.svg"alt="Logo"/>
