--- a/assets/pages/founders.html
+++ b/assets/pages/founders.html
@@ -23,7 +23,7 @@
             Працював на позиціях Software Engineer і Team Lead з 2009 року. З
             2014 керує власною IT-компанією, активно співпрацює з іноземними
             партнерами та розвиває нові напрямки. Брав участь у проєктах для
-            Eurovision, Total, KPMG.
+            <strong>Eurovision</strong>, Total, KPMG.
           </p>
           <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d1088146403fdd6b221_Rectangle_68392x.png"alt="Artem Barmin"/>
           <li>КОСТЯНТИН МОТОРНИЙ</li>
