--- a/assets/pages/box-model.html
+++ b/assets/pages/box-model.html
@@ -8,20 +8,17 @@
   </head>
   <body>
     <main>
-      <section class="Chess">
-        <h2>Chess</h2>
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-
-        <div class="box4"></div>
-        <div class="box5"></div>
-        <div class="box6"></div>
-
-        <div class="box7"></div>
-        <div class="box8"></div>
-        <div class="box9"></div>
-      </section>
+      <div class="chess">
+        <div class="b box"></div>
+        <div class="w box"></div>
+        <div class="b box"></div>
+        <div class="w box"></div>
+        <div class="b box"></div>
+        <div class="w box"></div>
+        <div class="b box"></div>
+        <div class="w box"></div>
+        <div class="b box"></div>
+      </div>
     </main>
   </body>
 </html>
