Fix footer inline-block

--- a/assets/pages/beach.html
+++ b/assets/pages/beach.html
@@ -14,8 +14,8 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolorum
         facilis quae tempore nobis!
       </p>
-      <button class="btn">Read More</button>
-        <a href="#"></a>
+      <!-- <button class="btn">Read More</button> -->
+        <button class="btn">Read More</button>
 
     </header>
     <main>
@@ -42,8 +42,7 @@
       <footer class="footer">
         <p class="lorem11">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt odio
-          quo doloribus voluptatum quia temporibus consequuntur ad eligendi
-          assumenda fuga.
+          quo doloribus voluptatum quia temporibus consequuntur ad eligendi.
         </p>
         <p class="lorem22">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
