--- a/assets/pages/table.html
+++ b/assets/pages/table.html
@@ -18,57 +18,57 @@
           <th scope="col" class="line5">professional<br /><br><br><span class="big">$99</span><br />per month</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <th scope="row" class="left amount">Amount of space</th>
-          <td class="gb20">20GB</td>
-          <td class="line40">40GB</td>
-          <td class="gb110">110GB</td>
-          <td class="unl">Unlimeted</td>
+      <tbody class="body">
+        <tr class="firstt">
+          <th scope="row" class="left amount item">Amount of space</th>
+          <td class="gb20 item">20GB</td>
+          <td class="line40 item">40GB</td>
+          <td class="gb110 item">110GB</td>
+          <td class="unl item">Unlimeted</td>
         </tr>
-        <tr>
-          <th scope="row"class="left band">Bandwidth per month</th>
-          <td>120GB</td>
-          <td class="gb240">240GB</td>
-          <td>610</td>
-          <td class="gb1300">1300GB</td>
+        <tr class="body">
+          <th scope="row"class="left band item2">Bandwidth per month</th>
+          <td class="item2">120GB</td>
+          <td class="gb240 item2">240GB</td>
+          <td class="item2">610</td>
+          <td class="gb1300 item2">1300GB</td>
         </tr>
-        <tr>
-          <th scope="row"class="left email">Email acounts</th>
-          <td class="n1">1</td>
-          <td class="cl15">15</td>
-          <td class="cl60">60</td>
-          <td class="unl60">Unlimeted</td>
+        <tr class="body">
+          <th scope="row"class="left email item">Email acounts</th>
+          <td class="n1 item">1</td>
+          <td class="cl15 item">15</td>
+          <td class="cl60 item">60</td>
+          <td class="unl60 item">Unlimeted</td>
         </tr>
-        <tr>
-          <th scope="row"class="left data">MySQL databases</th>
-          <td>1</td>
-          <td class="cl150">15</td>
-          <td>60</td>
-          <td class="unl600">Unlimeted</td>
+        <tr class="body">
+          <th scope="row"class="left data item3">MySQL databases</th>
+          <td class="item3">1</td>
+          <td class="cl150 item3">15</td>
+          <td class="item3">60</td>
+          <td class="unl600 item3">Unlimeted</td>
         </tr>
-        <tr>
-          <th scope="row"class="left h">25h support</th>
-          <td class="noot">No</td>
-          <td class="yes1">Yes</td>
-          <td class="yess">Yes</td>
-          <td class="yes2">Yes</td>
+        <tr class="body">
+          <th scope="row"class="left h item">25h support</th>
+          <td class="noot item">No</td>
+          <td class="yes1 item">Yes</td>
+          <td class="yess item">Yes</td>
+          <td class="yes2 item">Yes</td>
         </tr>
-        <tr>
-          <th scope="row"class="left sup">Support tickets per month</th>
-          <td>2</td>
-          <td class="cl66">6</td>
-          <td>14</td>
-          <td class="cl200">20</td>
+        <tr class="body">
+          <th scope="row"class="left sup item4">Support tickets per month</th>
+          <td class="item4">2</td>
+          <td class="cl66 item4">6</td>
+          <td class="item4">14</td>
+          <td class="cl200 item4">20</td>
         </tr>
       </tbody>
       <tfoot>
         <tr>
-          <td class="zero"></td>
-          <td class="st11"><button>START</button></td>
-          <td class="st2"><button>START</button></td>
-          <td class="st33"><button>START</button></td>
-          <td class="st4"><button>START</button></td>
+          <td class="zero item"></td>
+          <td class="st11  item"><button>START</button></td>
+          <td class="st2  item"><button>START</button></td>
+          <td class="st33  item"><button>START</button></td>
+          <td class="st4  item"><button>START</button></td>
         </tr>
       </tfoot>
     </table>
