Fix site founders <li>

--- a/assets/pages/founders.html
+++ b/assets/pages/founders.html
@@ -18,22 +18,28 @@
           Засновники IT-компанії Freshcode є висококласними програмістами!
         </h2>
         <ul>
-          <li>АРТЕМ БАРМІН</li>
+          <li>АРТЕМ БАРМІН
             <p>
-            Працював на позиціях Software Engineer і Team Lead з 2009 року. З
-            2014 керує власною IT-компанією, активно співпрацює з іноземними
-            партнерами та розвиває нові напрямки. Брав участь у проєктах для
-            <strong>Eurovision</strong>, Total, KPMG.
+              Працював на позиціях Software Engineer і Team Lead з 2009 року. З
+              2014 керує власною IT-компанією, активно співпрацює з іноземними
+              партнерами та розвиває нові напрямки. Брав участь у проєктах для
+              <strong>Eurovision</strong>, Total, KPMG.
             </p>
-            <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d1088146403fdd6b221_Rectangle_68392x.png"alt="Artem Barmin"/>
-          <li>КОСТЯНТИН МОТОРНИЙ</li>
+            <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d1088146403fdd6b221_Rectangle_68392x.png"
+              alt="Artem Barmin"/>
+          </li>
+
+          <li>КОСТЯНТИН МОТОРНИЙ
             <p>
             Має досвід роботи в IT з 2012 року. Розробляв клієнтські та серверні
             додатки, спеціалізовані рішення на масовий ринок. Понад 7 років
             розвиває власну IT-компанію, навчає початківців і відповідає за
             технічну сторону проєктів.
             </p>
-            <img src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d0d690061f018eddf61_Rectangle_68402x-p-800.png"alt="Kostya Motornyi"/>
+            <img
+            src="https://assets-global.website-files.com/6344189dd2b0c1702da52feb/63613d0d690061f018eddf61_Rectangle_68402x-p-800.png"
+            alt="Kostya Motornyi"/>
+          </li>
         </ul>
       </section>
     </main>
