Fix beach compact

--- a/assets/pages/beach.html
+++ b/assets/pages/beach.html
@@ -17,7 +17,7 @@
       <button class="btn">Read More</button>
     </header>
     <main>
-      <p class="lorem2">
+      <p class="lorem2 section">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit quo,
         alias labore ullam ab impedit a sit quas vero numquam. Distinctio totam,
         illo quam odit rem eos quia! Enim molestias ab veniam, nobis repellendus
@@ -27,7 +27,7 @@
         hic labore, quod expedita placeat aliquam totam. Aperiam optio esse
         numquam eligendi quis, nemo error dicta!
       </p>
-      <p class="lorem3">
+      <p class="lorem3 section">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tenetur
         perferendis expedita pariatur quasi voluptatem. Repudiandae quos nemo
         praesentium et modi, repellat consequuntur sint exercitationem
@@ -38,16 +38,16 @@
         aspernatur nostrum officiis!
       </p>
       <footer class="footer">
-        <p class="lorem11">
+        <p class="lorem11 section section2">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt odio
           quo doloribus voluptatum quia temporibus consequuntur ad eligendi.
         </p>
-        <p class="lorem22">
+        <p class="lorem22 section section2">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Exercitationem magni quo unde nihil illo ex sint a doloremque
           distinctio? Harum?
         </p>
-        <p class="lorem33">
+        <p class="lorem33 section section2">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
           ipsum rem cumque veniam molestiae adipisci repudiandae illo vitae
           consequatur minus?
