--- a/assets/pages/beach.html
+++ b/assets/pages/beach.html
@@ -9,50 +9,69 @@
 
   <body>
     <header class="header">
-      <h1 class="name">Welcome To The Beach</h1>
-      <p class="lorem1">
+      <h1>Welcome To The Beach</h1>
+      <p class="text-header">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolorum
         facilis quae tempore nobis!
       </p>
       <button class="btn">Read More</button>
     </header>
     <main>
-      <p class="lorem2 section">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit quo,
-        alias labore ullam ab impedit a sit quas vero numquam. Distinctio totam,
-        illo quam odit rem eos quia! Enim molestias ab veniam, nobis repellendus
-        hic labore, quod expedita placeat aliquam totam. Aperiam optio esse
-        numquam eligendi quis, nemo error dicta!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit quo,alias labore ullam ab impedit a sit quas vero numquam. Distinctio totam,
-        illo quam odit rem eos quia! Enim molestias ab veniam, nobis repellendus
-        hic labore, quod expedita placeat aliquam totam. Aperiam optio esse
-        numquam eligendi quis, nemo error dicta!
-      </p>
-      <p class="lorem3 section">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tenetur
-        perferendis expedita pariatur quasi voluptatem. Repudiandae quos nemo
-        praesentium et modi, repellat consequuntur sint exercitationem
-        aspernatur nostrum officiis voluptatem tempore architecto aperiam
-        numquam ut autem a illum porro earum! Labore laboriosam ut velit quas
-        magnam minima a rem nisi vel!Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tenetur perferendis expedita pariatur quasi voluptatem. Repudiandae quos nemo
-        praesentium et modi, repellat consequuntur sint exercitationem
-        aspernatur nostrum officiis!
-      </p>
-      <footer class="footer">
-        <p class="lorem11 section section2">
+      <section>
+        <h2>Title-1</h2>
+        <p class="text-1-main section">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit quo,
+          alias labore ullam ab impedit a sit quas vero numquam. Distinctio
+          totam, illo quam odit rem eos quia! Enim molestias ab veniam, nobis
+          repellendus hic labore, quod expedita placeat aliquam totam. Aperiam
+          optio esse numquam eligendi quis, nemo error dicta!Lorem, ipsum dolor
+          sit amet consectetur adipisicing elit. Fugit quo,alias labore ullam ab
+          impedit a sit quas vero numquam. Distinctio totam, illo quam odit rem
+          eos quia! Enim molestias ab veniam, nobis repellendus hic labore, quod
+          expedita placeat aliquam totam. Aperiam optio esse numquam eligendi
+          quis, nemo error dicta!
+        </p>
+      </section>
+      <section>
+        <h2>Title-2</h2>
+        <p class="text-2-main section section-alt-color">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+          tenetur perferendis expedita pariatur quasi voluptatem. Repudiandae
+          quos nemo praesentium et modi, repellat consequuntur sint
+          exercitationem aspernatur nostrum officiis voluptatem tempore
+          architecto aperiam numquam ut autem a illum porro earum! Labore
+          laboriosam ut velit quas magnam minima a rem nisi vel!Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Dolorum tenetur
+          perferendis expedita pariatur quasi voluptatem. Repudiandae quos nemo
+          praesentium et modi, repellat consequuntur sint exercitationem
+          aspernatur nostrum officiis consequuntur sint exercitationem consequuntur sint exercitationem consequuntur sint exercitationem!
+        </p>
+      </section>
+    </main>
+    <footer class="footer">
+      <section>
+        <h3>Title-3</h3>
+        <p class="text-1-footer section small-section">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt odio
           quo doloribus voluptatum quia temporibus consequuntur ad eligendi.
         </p>
-        <p class="lorem22 section section2">
+      </section>
+      <section>
+        <h3>Title-4</h3>
+        <p class="text-2-footer section small-section section-alt-color">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Exercitationem magni quo unde nihil illo ex sint a doloremque
           distinctio? Harum?
         </p>
-        <p class="lorem33 section section2">
+      </section>
+      <section>
+        <h3>Title-5</h3>
+        <p class="text-3-footer section small-section">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
           ipsum rem cumque veniam molestiae adipisci repudiandae illo vitae
           consequatur minus?
         </p>
-      </footer>
-    </main>
+      </section>
+    </footer>
   </body>
 </html>
