Add position example

--- a/assets/pages/beach.html
+++ b/assets/pages/beach.html
@@ -17,9 +17,9 @@
       <button class="btn">Read More</button>
     </header>
     <main>
-      <section>
+      <section class="text-1-main section">
         <h2>Title-1</h2>
-        <p class="text-1-main section">
+        <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit quo,
           alias labore ullam ab impedit a sit quas vero numquam. Distinctio
           totam, illo quam odit rem eos quia! Enim molestias ab veniam, nobis
@@ -32,9 +32,9 @@
           quis, nemo error dicta!
         </p>
       </section>
-      <section>
+      <section class="text-2-main section section-alt-color">
         <h2>Title-2</h2>
-        <p class="text-2-main section section-alt-color">
+        <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
           tenetur perferendis expedita pariatur quasi voluptatem. Repudiandae
           quos nemo praesentium et modi, repellat consequuntur sint
@@ -44,29 +44,30 @@
           dolor sit amet consectetur adipisicing elit. Dolorum tenetur
           perferendis expedita pariatur quasi voluptatem. Repudiandae quos nemo
           praesentium et modi, repellat consequuntur sint exercitationem
-          aspernatur nostrum officiis consequuntur sint exercitationem consequuntur sint exercitationem consequuntur sint exercitationem!
+          aspernatur nostrum officiis consequuntur sint exercitationem
+          consequuntur sint exercitationem consequuntur sint exercitationem!
         </p>
       </section>
     </main>
     <footer class="footer">
-      <section>
+      <section class="text-1-footer section small-section">
         <h3>Title-3</h3>
-        <p class="text-1-footer section small-section">
+        <p class="text-left-footer">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt odio
           quo doloribus voluptatum quia temporibus consequuntur ad eligendi.
         </p>
       </section>
-      <section>
+      <section class="text-2-footer section small-section section-alt-color">
         <h3>Title-4</h3>
-        <p class="text-2-footer section small-section section-alt-color">
+        <p class="text-left-footer">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Exercitationem magni quo unde nihil illo ex sint a doloremque
           distinctio? Harum?
         </p>
       </section>
-      <section>
+      <section class="text-2-footer section small-section">
         <h3>Title-5</h3>
-        <p class="text-3-footer section small-section">
+        <p class="text-left-footer">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
           ipsum rem cumque veniam molestiae adipisci repudiandae illo vitae
           consequatur minus?
