Add table button hover

--- a/assets/pages/table.html
+++ b/assets/pages/table.html
@@ -20,55 +20,55 @@
       </thead>
       <tbody class="body">
         <tr class="firstt">
-          <th scope="row" class="left amount item">Amount of space</th>
-          <td class="gb20 item">20GB</td>
-          <td class="line40 item">40GB</td>
-          <td class="gb110 item">110GB</td>
-          <td class="unl item">Unlimeted</td>
+          <th scope="row" class="item">Amount of space</th>
+          <td class="item">20GB</td>
+          <td class="item">40GB</td>
+          <td class="item">110GB</td>
+          <td class="item">Unlimeted</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="left band item2">Bandwidth per month</th>
+          <th scope="row"class="item2">Bandwidth per month</th>
           <td class="item2">120GB</td>
-          <td class="gb240 item2">240GB</td>
+          <td class="item2">240GB</td>
           <td class="item2">610</td>
-          <td class="gb1300 item2">1300GB</td>
+          <td class="item2">1300GB</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="left email item">Email acounts</th>
-          <td class="n1 item">1</td>
-          <td class="cl15 item">15</td>
-          <td class="cl60 item">60</td>
-          <td class="unl60 item">Unlimeted</td>
+          <th scope="row"class="item">Email acounts</th>
+          <td class="item">1</td>
+          <td class="item">15</td>
+          <td class="item">60</td>
+          <td class="item">Unlimeted</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="left data item3">MySQL databases</th>
+          <th scope="row"class="item3">MySQL databases</th>
           <td class="item3">1</td>
-          <td class="cl150 item3">15</td>
+          <td class="item3">15</td>
           <td class="item3">60</td>
-          <td class="unl600 item3">Unlimeted</td>
+          <td class="item3">Unlimeted</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="left h item">25h support</th>
-          <td class="noot item">No</td>
-          <td class="yes1 item">Yes</td>
-          <td class="yess item">Yes</td>
-          <td class="yes2 item">Yes</td>
+          <th scope="row"class="item">25h support</th>
+          <td class="item">No</td>
+          <td class="item">Yes</td>
+          <td class="item">Yes</td>
+          <td class="item">Yes</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="left sup item4">Support tickets per month</th>
+          <th scope="row"class="item4">Support tickets per month</th>
           <td class="item4">2</td>
-          <td class="cl66 item4">6</td>
+          <td class="item4">6</td>
           <td class="item4">14</td>
-          <td class="cl200 item4">20</td>
+          <td class="item4">20</td>
         </tr>
       </tbody>
       <tfoot>
         <tr>
-          <td class="zero item"></td>
-          <td class="st11  item"><button>START</button></td>
-          <td class="st2  item"><button>START</button></td>
-          <td class="st33  item"><button>START</button></td>
-          <td class="st4  item"><button>START</button></td>
+          <td class="item"></td>
+          <td class="item"><button class="start">START</button></td>
+          <td class="item"><button class="start">START</button></td>
+          <td class="item"><button class="start">START</button></td>
+          <td class="item"><button class="start">START</button></td>
         </tr>
       </tfoot>
     </table>
