Fix beach h3/h2 text-aline-center

--- a/assets/pages/beach.html
+++ b/assets/pages/beach.html
@@ -51,14 +51,14 @@
     </main>
     <footer class="footer">
       <section class="text-1-footer section small-section">
-        <h3>Title-3</h3>
+        <h2 class="title-footer">Title-3</h2>
         <p class="text-left-footer">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt odio
           quo doloribus voluptatum quia temporibus consequuntur ad eligendi.
         </p>
       </section>
       <section class="text-2-footer section small-section section-alt-color">
-        <h3>Title-4</h3>
+        <h2 class="title-footer">Title-4</h2>
         <p class="text-left-footer">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Exercitationem magni quo unde nihil illo ex sint a doloremque
@@ -66,7 +66,7 @@
         </p>
       </section>
       <section class="text-2-footer section small-section">
-        <h3>Title-5</h3>
+        <h2 title-footer>Title-5</h2>
         <p class="text-left-footer">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
           ipsum rem cumque veniam molestiae adipisci repudiandae illo vitae
