Fix table classes

--- a/assets/pages/table.html
+++ b/assets/pages/table.html
@@ -11,64 +11,64 @@
     <table>
       <thead class="head">
         <tr>
-          <th scope="col" class="line1">Choose your plan</th>
-          <th scope="col" class="line2">starter<br /><br><br><span class="big">$10</span><br />per month</th>
-          <th scope="col" class="line3">econom<br /><br><br><span class="big">$30</span><br />per month</th>
-          <th scope="col" class="line4">standart<br /><br><br><span class="big">$59</span><br />per month</th>
-          <th scope="col" class="line5">professional<br /><br><br><span class="big">$99</span><br />per month</th>
+          <th scope="col" class="th-col-1">Choose your plan</th>
+          <th scope="col" class="th-col-2">starter<br /><br><br><span class="big">$10</span><br />per month</th>
+          <th scope="col" class="th-col-3">econom<br /><br><br><span class="big">$30</span><br />per month</th>
+          <th scope="col" class="th-col-4">standart<br /><br><br><span class="big">$59</span><br />per month</th>
+          <th scope="col" class="th-col-5">professional<br /><br><br><span class="big">$99</span><br />per month</th>
         </tr>
       </thead>
       <tbody class="body">
-        <tr class="firstt">
-          <th scope="row" class="item">Amount of space</th>
-          <td class="item">20GB</td>
-          <td class="item">40GB</td>
-          <td class="item">110GB</td>
-          <td class="item">Unlimeted</td>
+        <tr>
+          <th scope="row" class="color">Amount of space</th>
+          <td class="color">20GB</td>
+          <td class="color">40GB</td>
+          <td class="color">110GB</td>
+          <td class="color">Unlimeted</td>
+        </tr>
+        <tr class="body grey">
+          <th scope="row"class="color grey">Bandwidth per month</th>
+          <td class="color grey">120GB</td>
+          <td class="color grey">240GB</td>
+          <td class="color grey">610</td>
+          <td class="color grey">1300GB</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="item2">Bandwidth per month</th>
-          <td class="item2">120GB</td>
-          <td class="item2">240GB</td>
-          <td class="item2">610</td>
-          <td class="item2">1300GB</td>
+          <th scope="row"class="color">Email acounts</th>
+          <td class="color">1</td>
+          <td class="color">15</td>
+          <td class="color">60</td>
+          <td class="color">Unlimeted</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="item">Email acounts</th>
-          <td class="item">1</td>
-          <td class="item">15</td>
-          <td class="item">60</td>
-          <td class="item">Unlimeted</td>
+          <th scope="row"class="color grey">MySQL databases</th>
+          <td class="color grey">1</td>
+          <td class="color grey">15</td>
+          <td class="color grey">60</td>
+          <td class="color grey">Unlimeted</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="item3">MySQL databases</th>
-          <td class="item3">1</td>
-          <td class="item3">15</td>
-          <td class="item3">60</td>
-          <td class="item3">Unlimeted</td>
+          <th scope="row"class="color">25h support</th>
+          <td class="color">No</td>
+          <td class="color">Yes</td>
+          <td class="color">Yes</td>
+          <td class="color">Yes</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="item">25h support</th>
-          <td class="item">No</td>
-          <td class="item">Yes</td>
-          <td class="item">Yes</td>
-          <td class="item">Yes</td>
-        </tr>
-        <tr class="body">
-          <th scope="row"class="item4">Support tickets per month</th>
-          <td class="item4">2</td>
-          <td class="item4">6</td>
-          <td class="item4">14</td>
-          <td class="item4">20</td>
+          <th scope="row"class="color grey">Support tickets per month</th>
+          <td class="color grey">2</td>
+          <td class="color grey">6</td>
+          <td class="color grey">14</td>
+          <td class="color grey">20</td>
         </tr>
       </tbody>
       <tfoot>
         <tr>
-          <td class="item"></td>
-          <td class="item"><button class="start">START</button></td>
-          <td class="item"><button class="start">START</button></td>
-          <td class="item"><button class="start">START</button></td>
-          <td class="item"><button class="start">START</button></td>
+          <td class="color"></td>
+          <td class="color"><button class="start">START</button></td>
+          <td class="color"><button class="start">START</button></td>
+          <td class="color"><button class="start">START</button></td>
+          <td class="color"><button class="start">START</button></td>
         </tr>
       </tfoot>
     </table>
