--- a/assets/pages/table.html
+++ b/assets/pages/table.html
@@ -12,10 +12,10 @@
       <thead class="head">
         <tr>
           <th scope="col" class="th-col-1">Choose your plan</th>
-          <th scope="col" class="th-col-2">starter<br /><br><br><span class="big">$10</span><br />per month</th>
-          <th scope="col" class="th-col-3">econom<br /><br><br><span class="big">$30</span><br />per month</th>
-          <th scope="col" class="th-col-4">standart<br /><br><br><span class="big">$59</span><br />per month</th>
-          <th scope="col" class="th-col-5">professional<br /><br><br><span class="big">$99</span><br />per month</th>
+          <th scope="col" class="th-col-2">starter<span class="big">$10</span>per month</th>
+          <th scope="col" class="th-col-3">econom<span class="big">$30</span>per month</th>
+          <th scope="col" class="th-col-4">standart<span class="big">$59</span>per month</th>
+          <th scope="col" class="th-col-5">professional<span class="big">$99</span>per month</th>
         </tr>
       </thead>
       <tbody class="body">
@@ -27,11 +27,11 @@
           <td class="color">Unlimeted</td>
         </tr>
         <tr class="body grey">
-          <th scope="row"class="color grey">Bandwidth per month</th>
-          <td class="color grey">120GB</td>
-          <td class="color grey">240GB</td>
-          <td class="color grey">610</td>
-          <td class="color grey">1300GB</td>
+          <th scope="row"class="color grey white">Bandwidth per month</th>
+          <td class="color grey white">120GB</td>
+          <td class="color grey white">240GB</td>
+          <td class="color grey white">610</td>
+          <td class="color grey white">1300GB</td>
         </tr>
         <tr class="body">
           <th scope="row"class="color">Email acounts</th>
@@ -41,11 +41,11 @@
           <td class="color">Unlimeted</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="color grey">MySQL databases</th>
-          <td class="color grey">1</td>
-          <td class="color grey">15</td>
-          <td class="color grey">60</td>
-          <td class="color grey">Unlimeted</td>
+          <th scope="row"class="color grey white">MySQL databases</th>
+          <td class="color grey white">1</td>
+          <td class="color grey white">15</td>
+          <td class="color grey white">60</td>
+          <td class="color grey white">Unlimeted</td>
         </tr>
         <tr class="body">
           <th scope="row"class="color">25h support</th>
@@ -55,11 +55,11 @@
           <td class="color">Yes</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="color grey">Support tickets per month</th>
-          <td class="color grey">2</td>
-          <td class="color grey">6</td>
-          <td class="color grey">14</td>
-          <td class="color grey">20</td>
+          <th scope="row"class="color grey white">Support tickets per month</th>
+          <td class="color grey white">2</td>
+          <td class="color grey white">6</td>
+          <td class="color grey white">14</td>
+          <td class="color grey white">20</td>
         </tr>
       </tbody>
       <tfoot>
