--- a/assets/pages/table.html
+++ b/assets/pages/table.html
@@ -12,10 +12,18 @@
       <thead class="head">
         <tr>
           <th scope="col" class="th-col-1">Choose your plan</th>
-          <th scope="col" class="th-col-2">starter<span class="big">$10</span>per month</th>
-          <th scope="col" class="th-col-3">econom<span class="big">$30</span>per month</th>
-          <th scope="col" class="th-col-4">standart<span class="big">$59</span>per month</th>
-          <th scope="col" class="th-col-5">professional<span class="big">$99</span>per month</th>
+          <th scope="col" class="th-col-2">
+            starter<span class="big">$10</span>per month
+          </th>
+          <th scope="col" class="th-col-3">
+            econom<span class="big">$30</span>per month
+          </th>
+          <th scope="col" class="th-col-4">
+            standart<span class="big">$59</span>per month
+          </th>
+          <th scope="col" class="th-col-5">
+            professional<span class="big">$99</span>per month
+          </th>
         </tr>
       </thead>
       <tbody class="body">
@@ -27,35 +35,37 @@
           <td class="color">Unlimeted</td>
         </tr>
         <tr class="body grey">
-          <th scope="row"class="color grey white">Bandwidth per month</th>
+          <th scope="row" class="color grey white">Bandwidth per month</th>
           <td class="color grey white">120GB</td>
           <td class="color grey white">240GB</td>
           <td class="color grey white">610</td>
           <td class="color grey white">1300GB</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="color">Email acounts</th>
+          <th scope="row" class="color">Email acounts</th>
           <td class="color">1</td>
           <td class="color">15</td>
           <td class="color">60</td>
           <td class="color">Unlimeted</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="color grey white">MySQL databases</th>
+          <th scope="row" class="color grey white">MySQL databases</th>
           <td class="color grey white">1</td>
           <td class="color grey white">15</td>
           <td class="color grey white">60</td>
           <td class="color grey white">Unlimeted</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="color">25h support</th>
+          <th scope="row" class="color">25h support</th>
           <td class="color">No</td>
           <td class="color">Yes</td>
           <td class="color">Yes</td>
           <td class="color">Yes</td>
         </tr>
         <tr class="body">
-          <th scope="row"class="color grey white">Support tickets per month</th>
+          <th scope="row" class="color grey white">
+            Support tickets per month
+          </th>
           <td class="color grey white">2</td>
           <td class="color grey white">6</td>
           <td class="color grey white">14</td>
