Add titli-line padding

--- a/assets/pages/table.html
+++ b/assets/pages/table.html
@@ -11,18 +11,18 @@
     <table>
       <thead class="head">
         <tr>
-          <th scope="col" class="th-col-1">Choose your plan</th>
-          <th scope="col" class="th-col-2">
-            starter<span class="big">$10</span>per month
+          <th scope="col" class="th-col-1 title-line">Choose your plan</th>
+          <th scope="col" class="th-col-2 title-line">
+            starter<span>$10</span>per month
           </th>
-          <th scope="col" class="th-col-3">
-            econom<span class="big">$30</span>per month
+          <th scope="col" class="th-col-3 title-line">
+            econom<span>$30</span>per month
           </th>
-          <th scope="col" class="th-col-4">
-            standart<span class="big">$59</span>per month
+          <th scope="col" class="th-col-4 title-line">
+            standart<span>$59</span>per month
           </th>
-          <th scope="col" class="th-col-5">
-            professional<span class="big">$99</span>per month
+          <th scope="col" class="th-col-5 title-line">
+            professional<span>$99</span>per month
           </th>
         </tr>
       </thead>
